Ready for deploy

--- a/instahust/templates/connected.html
+++ b/instahust/templates/connected.html
@@ -4,10 +4,9 @@
     <title>InstaHUST</title>
 </head>
 <body style="font-family:'Helvetica Neue'">
-<!--     <a href="http://github.com/Instagram/Instadrop"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://assets1.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf?repo=&url=http%3A%2F%2Fs3.amazonaws.com%2Fgithub%2Fribbons%2Fforkme_right_red_aa0000.png&path=" alt="Fork me on GitHub"></a> -->
     <div style="margin:50px auto;width:550px;position:relative">
         <h1>
-            好极了！<br/><br/>您的Instagram账号与新浪微博账号均已连接。
+            好极了！<br/><br/>您的Instagram账号已经连接。
             <br /> <br /> 从现在开始，您每次使用Instagram发布带有#instahust标签的照片，
             这张照片就会立即同步到您的新浪微博账号中！
         </h1>
@@ -16,14 +15,10 @@
             <div style:"position:absolute;left:0">
                 <h1 style="display:inline;margin:0">*\(^o^)/*</h1>
             </div>
-<!--             <div style="position:absolute;right:0;margin:0">
-                Photos are placed in an "Instagram Photos" folder.
-            </div> -->
         </div>
         <br /> <br />
         <div style="position:absolute;right:0;">
             <h4><a href="/instagram/disconnect">断开与Instagram的连接</a></h4>
-            <h4><a href="/weibo/disconnect">断开与新浪微博的连接</a></h4>
         </div>
     </div>
 </body>
